--- a/resources/assets/styles/layouts/_gallery.scss
+++ b/resources/assets/styles/layouts/_gallery.scss
@@ -11,6 +11,10 @@
     margin-bottom: gutter(1);
   }
 
+  @include media("<1500px") {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
   @include media("<lg") {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -34,7 +38,9 @@
     overflow: hidden;
 
     &:first-of-type {
-      grid-column: 1 / 3;
+      @include media(">md") {
+        grid-column: 1 / 3;
+      }
     }
 
     &::before {
