--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -6,6 +6,7 @@
 @import "~animate.css";
 @import "~flickity/css/flickity.css";
 @import "vendors/scss-lock/css-lock";
+@import "~aos/dist/aos.css";
 
 //common
 @import "common/functions";
