--- a/resources/assets/styles/layouts/_content-page.scss
+++ b/resources/assets/styles/layouts/_content-page.scss
@@ -17,8 +17,12 @@
     margin-bottom: gutter(2);
   }
 
+  h3 {
+    margin: 0;
+  }
+
   p {
-    line-height: 28px;
+    line-height: 24px;
   }
 
   ol {
